# spriteworkflow

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
spriteworkflow/: __init__.py  cli.py  extractor.py  ffmpeg_manager.py  matte.py  report.py  spritesheet_grid.py  spritesheet_lineal.py
tests/: cli_test.py  conftest.py  extractor_test.py  matte_test.py  report_test.py  spritesheet_grid_test.py  spritesheet_lineal_test.py
