[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spriteworkflow"
version = "0.1.0"
description = "Simple video to spritesheet workflow library."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

authors = [
    { name = "jhonvillanueva-hash", email = "jhon.villanueva.lozano.v@gmail.com" }
]

dependencies = [
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "imageio-ffmpeg>=0.6.0"
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/jhonvillanueva-hash/spriteworkflow"

[project.scripts]
spriteworkflow = "spriteworkflow.cli:main"

[tool.setuptools.packages.find]
include = ["spriteworkflow"]